[project]
name = "llm_app_test"
version = "0.1.0b5.dev0"
description = "A unit testing framework for applications using large language models (LLMs). It leverages LLMs to validate outputs against natural language test specifications (reliability validated through 30,000 test executions), providing a powerful tool for behavioural testing of applications containing an LLM (not for testing LLMs themselves)."
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "Morgan Lee", email = "morganj.lee01@gmail.com"},
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0"
]
license = {text = "MIT"}
keywords = ["testing", "llm", "semantic", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing"
]

[project.urls]
Homepage = "https://github.com/Shredmetal/llmtest"
Documentation = "https://shredmetal.github.io/llmtest/"
Repository = "https://github.com/Shredmetal/llmtest.git"

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "flake8",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "build",
    "twine"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points.pytest11]
llmtest = "llm_app_test.pytest_plugin.plugin"